--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body class="body">
     <header>
         <nav>
-        <a class="logo" href="./index.html"></a>
-        <span class="span">Studio</span>
+        <a class="logo" href="./index.html"
+        >Web<span class="logol">Studio</span></a>
         <svg width="115" height="24" viewBox="0 0 115 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M5.706 5.756H8.01L9.468 9.986L10.944 5.756H13.23L11.034 11.57L12.654 15.638L16.272 5.72H18.972L13.86 18.5H11.718L9.468 13.136L7.236 18.5H5.094L0 5.72H2.664L6.3 15.638L7.884 11.57L5.706 5.756ZM29.6952 16.322V18.5H20.8212V5.72H29.5332V7.898H23.3052V10.976H28.6872V12.992H23.3052V16.322H29.6952ZM42.4678 15.206C42.4678 15.926 42.2818 16.532 41.9098 17.024C41.5378 17.504 41.0338 17.87 40.3978 18.122C39.7738 18.374 39.0898 18.5 38.3458 18.5H32.1718V5.72H39.0118C39.6118 5.72 40.1278 5.882 40.5598 6.206C41.0038 6.518 41.3398 6.926 41.5678 7.43C41.8078 7.922 41.9278 8.438 41.9278 8.978C41.9278 9.59 41.7718 10.172 41.4598 10.724C41.1478 11.276 40.6918 11.684 40.0918 11.948C40.8238 12.164 41.3998 12.554 41.8198 13.118C42.2518 13.682 42.4678 14.378 42.4678 15.206ZM39.9658 14.738C39.9658 14.414 39.8998 14.126 39.7678 13.874C39.6358 13.61 39.4558 13.406 39.2278 13.262C39.0118 13.106 38.7598 13.028 38.4718 13.028H34.6558V16.394H38.3458C38.6458 16.394 38.9158 16.322 39.1558 16.178C39.4078 16.022 39.6058 15.818 39.7498 15.566C39.8938 15.314 39.9658 15.038 39.9658 14.738ZM34.6558 7.844V11.066H37.9678C38.2438 11.066 38.4958 11 38.7238 10.868C38.9518 10.736 39.1318 10.55 39.2638 10.31C39.4078 10.07 39.4798 9.782 39.4798 9.446C39.4798 9.122 39.4138 8.84 39.2818 8.6C39.1618 8.36 38.9938 8.174 38.7778 8.042C38.5738 7.91 38.3398 7.844 38.0758 7.844H34.6558Z"
@@ -60,18 +60,18 @@
                     problem to walk away with the perfect and creative solution.</p>
             </li>
             <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
+                <h3 class="teamh">Punctuality</h3>
+                <p class="teamp">Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
             <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize
+                <h3 class="teamh">Diligence</h3>
+                <p class="teamp">Research and confirm brands that present the strongest digital growth opportunities and minimize
                     risk.</p>
             </li>
             <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                <h3 class="teamh">Technologies</h3>
+                <p class="teamp">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
             </li>
         </ul>
@@ -79,8 +79,8 @@
 
         <section class="team">
         <h2 class="contenth">Our Team</h2>
-        <ul class="teamul">
-            <li>
+        <ul>
+            <li class="teamul">
                 <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" height="260">
                 <h3 class="teamh">Mark Guerrero</h3>
                 <p class="teamp">Product Designer</p>
@@ -88,18 +88,18 @@
             </li>
             <li>
                 <img src="./images/img-2.jpg" alt="Tom Ford" width="264" height="260">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h3 class="teamh">Tom Ford</h3>
+                <p class="teamp">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" height="260">
                 <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <p class="teamp">Marketing</p>
             </li>
             <li>
                 <img src="./images/img-4.jpg" alt="Daniel Wilson" width="264" height="260">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h3 class="teamh">Daniel Wilson</h3>
+                <p class="teamp">UI Designer</p>
             </li>
         </ul>
         </section>
@@ -114,36 +114,35 @@
                 </li>
                 <li>
                     <img src="./images/pay.jpg" alt="Cashless Payment" width="360" height="300">
-                    <h3>Cashless payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="teamh">Cashless Payment</h3>
+                    <p class="teamp">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/app2.jpg" alt="Meditation App" width="360" height="300">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="teamh">Meditation App</h3>
+                    <p class="teamp">App</p>
                 </li>
                 <li>
                     <img src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="teamh">Taxi Service</h3>
+                    <p class="teamp">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/phone.jpg" alt="Screen Illustrations" width="360" height="300">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="teamh">Screen Illustrations</h3>
+                    <p class="teamp">Design</p>
                 </li>
                 <li>
                     <img src="./images/girl.jpg" alt="Online Courses" width="360" height="300">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="teamh">Online Courses</h3>
+                    <p class="teamp">Marketing</p>
                 </li>
         </ul>
         </section>
         
     </main>
     <footer class="footer">
-        <a class="logo" href="./index.html"></a>
-        <span class="span">Studio</span>
+        <a class="logo" href="./index.html">Web<span class="logolf">Studio</span></a>
         <svg width="115" height="24" viewBox="0 0 115 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
                 d="M5.706 5.756H8.01L9.468 9.986L10.944 5.756H13.23L11.034 11.57L12.654 15.638L16.272 5.72H18.972L13.86 18.5H11.718L9.468 13.136L7.236 18.5H5.094L0 5.72H2.664L6.3 15.638L7.884 11.57L5.706 5.756ZM29.6952 16.322V18.5H20.8212V5.72H29.5332V7.898H23.3052V10.976H28.6872V12.992H23.3052V16.322H29.6952ZM42.4678 15.206C42.4678 15.926 42.2818 16.532 41.9098 17.024C41.5378 17.504 41.0338 17.87 40.3978 18.122C39.7738 18.374 39.0898 18.5 38.3458 18.5H32.1718V5.72H39.0118C39.6118 5.72 40.1278 5.882 40.5598 6.206C41.0038 6.518 41.3398 6.926 41.5678 7.43C41.8078 7.922 41.9278 8.438 41.9278 8.978C41.9278 9.59 41.7718 10.172 41.4598 10.724C41.1478 11.276 40.6918 11.684 40.0918 11.948C40.8238 12.164 41.3998 12.554 41.8198 13.118C42.2518 13.682 42.4678 14.378 42.4678 15.206ZM39.9658 14.738C39.9658 14.414 39.8998 14.126 39.7678 13.874C39.6358 13.61 39.4558 13.406 39.2278 13.262C39.0118 13.106 38.7598 13.028 38.4718 13.028H34.6558V16.394H38.3458C38.6458 16.394 38.9158 16.322 39.1558 16.178C39.4078 16.022 39.6058 15.818 39.7498 15.566C39.8938 15.314 39.9658 15.038 39.9658 14.738ZM34.6558 7.844V11.066H37.9678C38.2438 11.066 38.4958 11 38.7238 10.868C38.9518 10.736 39.1318 10.55 39.2638 10.31C39.4078 10.07 39.4798 9.782 39.4798 9.446C39.4798 9.122 39.4138 8.84 39.2818 8.6C39.1618 8.36 38.9938 8.174 38.7778 8.042C38.5738 7.91 38.3398 7.844 38.0758 7.844H34.6558Z"
